objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Transfer_of_Title__c</fullName>
        <formula>IF( OR( ISPICKVAL(Terms_Conditions__c, &apos;Siemens ZRG Internal&apos;) , ISPICKVAL(Terms_Conditions__c, &apos;Siemens Industry, Inc. Terms &amp; Conditions&apos;) ) , &apos;Shipping Point&apos; , &apos;Destination&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Terms &amp; Conditions  are Siemens ZRG Internal or Siemens Industry, Inc. Terms &amp; Conditions, then Transfer of Title happens upon Shipping Point , otherwise Destination</inlineHelpText>
        <label>Transfer of Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WARRANTY_PERIOD__c</fullName>
        <description>Changed the name from Warranty Period to Warranty NOtes. Ref : EM 1675</description>
        <inlineHelpText>General warranty periord and notes. Mapped from SAP</inlineHelpText>
        <label>Warranty Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WITNESS_TEST_REQD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is a FAT (Factory Acceptance Test) required as part of the scope? Mapped from SAP</inlineHelpText>
        <label>Witness Test Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_SO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a sales order is a warranty sales order.</description>
        <inlineHelpText>Indicates this is a warranty sales order</inlineHelpText>
        <label>Warranty SO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_from_Install_mo__c</fullName>
        <inlineHelpText>The term of the warranty in number of months from install, example 12. Mapped from SAP</inlineHelpText>
        <label>Warranty from Install (mo.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_from_ship_mo__c</fullName>
        <inlineHelpText>The term of the warranty in number of months from shipment, for example 18. Mapped from SAP</inlineHelpText>
        <label>Warranty from ship (mo.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Order #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>